--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "discord.js": "^13.5.1"
   },
   "devDependencies": {
-    "eslint": "^8.6.0"
+    "eslint": "^8.6.0",
+    "typescript": "^4.5.4"
   }
 }
