--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "<harrisonarmstrong93@gmail.com>",
   "license": "GNU-V3",
   "dependencies": {
-    "discord.js": "^13.5.1"
+    "discord.js": "^13.5.1",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8.6.0",
