--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "Nightmarebot-js",
   "version": "1.0.0",
   "description": "A Discord Bot",
-  "main": "index.js",
+  "main": "index.ts",
   "repository": "git@github.com:itsNightmareTime/Nightmarebot-js.git",
   "author": "<harrisonarmstrong93@gmail.com>",
   "license": "GNU-V3",
+  "scripts": {
+    "start": "node ."
+  },
   "dependencies": {
     "discord.js": "^13.5.1",
     "dotenv": "^10.0.0"
