--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "<harrisonarmstrong93@gmail.com>",
   "license": "GNU3",
   "scripts": {
-    "start": "node .",
+    "start": "ts-node src/bot.ts",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -21,7 +21,9 @@
     "pm2": "^5.1.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.8",
     "eslint": "^8.6.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
 }
