--- a/package.json
+++ b/package.json
@@ -13,15 +13,11 @@
   "dependencies": {
     "@discordjs/builders": "^0.11.0",
     "@discordjs/rest": "^0.2.0-canary.0",
-    "add": "^2.0.6",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.5.1",
     "dotenv": "^10.0.0",
     "global": "^4.4.0",
     "pm2": "^5.1.2"
   },
-  "devDependencies": {
-    "eslint": "^8.6.0",
-    "typescript": "^4.5.4"
-  }
+  "devDependencies": {}
 }
