--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
   "author": "<harrisonarmstrong93@gmail.com>",
   "license": "GNU3",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "cd src && node index.js",
     "deploy-commands": "cd src && node deploy-commands.js",
     "update-commands": "cd src && node update-commands.js"
-
   },
   "dependencies": {
     "@discordjs/builders": "^0.11.0",
@@ -19,7 +18,8 @@
     "discord.js": "^13.5.1",
     "dotenv": "^10.0.0",
     "global": "^4.4.0",
-    "pm2": "^5.1.2"
+    "pm2": "^5.1.2",
+    "strftime": "^0.10.1"
   },
   "devDependencies": {}
 }
