--- a/package.json
+++ b/package.json
@@ -1,25 +1,18 @@
 {
-  "name": "nightmarebot-js",
+  "name": "Nightmarebot-js",
   "version": "1.0.0",
-  "description": "A Discord Bot",
+  "description": "Swat-Server Discord Bot",
   "main": "index.ts",
   "repository": "git@github.com:itsNightmareTime/Nightmarebot-js.git",
-  "author": "<harrisonarmstrong93@gmail.com>",
-  "license": "GNU3",
-  "scripts": {
-    "start": "cd src && node index.js",
-    "deploy-commands": "cd src && node deploy-commands.js",
-    "update-commands": "cd src && node update-commands.js"
-  },
+  "author": "harrisonarmstrong93@gmail.com <harrisonarmstrong93@gmail.com>",
+  "license": "MIT",
   "dependencies": {
-    "@discordjs/builders": "^0.11.0",
-    "@discordjs/rest": "^0.2.0-canary.0",
-    "discord-api-types": "^0.26.1",
-    "discord.js": "^13.5.1",
-    "dotenv": "^10.0.0",
-    "global": "^4.4.0",
-    "pm2": "^5.1.2",
+    "@discordjs/rest": "^1.1.0",
+    "discord.js": "^14.3.0",
+    "dotenv": "^16.0.2",
     "strftime": "^0.10.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^8.23.0"
+  }
 }
