--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Nightmarebot-js",
+  "name": "nightmarebot-js",
   "version": "1.0.0",
   "description": "Swat-Server Discord Bot",
   "main": "index.ts",
@@ -10,6 +10,8 @@
     "@discordjs/rest": "^1.1.0",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
+    "sequelize": "^6.21.5",
+    "sqlite3": "^5.0.11",
     "strftime": "^0.10.1"
   },
   "devDependencies": {
