--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@discordjs/rest": "^1.1.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
     "sequelize": "^6.21.5",
