--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "@discordjs/rest": "^1.1.0",
     "axios": "^0.27.2",
-    "date-fns": "^2.29.3",
-    "discord.js": "^14.3.0",
+    "discord.js": "^14.4.0",
     "dotenv": "^16.0.2",
+    "luxon": "^3.0.4",
     "sequelize": "^6.21.5",
     "sqlite3": "^5.0.11",
     "strftime": "^0.10.1"
   },
   "devDependencies": {
+    "@types/luxon": "^3.0.1",
     "@types/node": "^18.7.18",
     "eslint": "^8.23.0",
     "ts-node": "^10.9.1",
