--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "harrisonarmstrong93@gmail.com <harrisonarmstrong93@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/bot.ts"
+    "start": "ts-node src/bot.ts",
+    "migrate": "ts-node src/helpers/migrate.ts"
   },
   "dependencies": {
     "@discordjs/rest": "^1.1.0",
