--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/rest": "^1.1.0",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.21.5",
     "sqlite3": "^5.0.11",
     "strftime": "^0.10.1"
