--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "axios": "^0.27.2",
     "discord.js": "^14.4.0",
     "dotenv": "^16.0.2",
-    "mysql2": "^2.3.3",
     "luxon": "^3.0.4",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.21.5",
-    "sqlite3": "^5.0.11",
-    "strftime": "^0.10.1"
+    "strftime": "^0.10.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/luxon": "^3.0.1",
     "@types/node": "^18.7.18",
+    "@types/uuid": "^8.3.4",
     "eslint": "^8.23.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
